--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
-@import "bootstrap/scss/bootstrap.scss";
+@import "bootstrap/scss/bootstrap";
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,700,900&display=swap");
+
+body {
+  margin: 0;
+  width: 100%;
+  height: 100vh;
+  font-family: "Montserrat", sans-serif;
+  background-color: #343d4b;
+}
