--- a/src/app/current-weather/current-weather.component.html
+++ b/src/app/current-weather/current-weather.component.html
@@ -1,7 +1,10 @@
-<div class="info">
-  <div class="location">Lviv</div>
-  <div class="date">21.06.2023</div>
-  <div class="weather-icon"></div>
-  <div class="temperature">26°C</div>
-  <div class="desription"></div>
+<div class="current-info">
+  <div class="gradient"></div>
+  <div class="location"><h3>Lviv</h3></div>
+  <div class="date"><h4>21.06.2023</h4></div>
+  <div class="weather-icon">
+    <img src="../../assets/img/sunny.svg" class="icon" />
+  </div>
+  <div class="temperature"><h1>26°C</h1></div>
+  <div class="description"><h2>Sunny</h2></div>
 </div>
