--- a/src/app/daily-forecast/daily-forecast.component.html
+++ b/src/app/daily-forecast/daily-forecast.component.html
@@ -1,1 +1,72 @@
-<p>daily-forecast works!</p>
+<div class="hourly-info">
+  <div class="row features">
+    <div class="col-8">
+      <p>PRECIPITATION</p>
+    </div>
+    <div class="col-4">
+      <p>0%</p>
+    </div>
+  </div>
+  <div class="row features">
+    <div class="col-8">
+      <p>Humidity</p>
+    </div>
+    <div class="col-4">
+      <p>80%</p>
+    </div>
+  </div>
+  <div class="row features">
+    <div class="col-8">
+      <p>Wind</p>
+    </div>
+    <div class="col-4">
+      <p>5 km/h</p>
+    </div>
+  </div>
+  <div class="row cards">
+    <div class="col-md">
+      <div class="card text-center">
+        <div class="card-body">
+          <h5 class="card-title hour">12:00</h5>
+          <div class="weather-icon">
+            <img src="../../assets/img/sunny.svg" class="icon" />
+          </div>
+          <p class="card-text temperature">26°C</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md text-center">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title hour">12:00</h5>
+          <div class="weather-icon">
+            <img src="../../assets/img/cloudy.svg" class="icon" />
+          </div>
+          <p class="card-text temperature">26°C</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md text-center">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title hour">12:00</h5>
+          <div class="weather-icon">
+            <img src="../../assets/img/cloudy.svg" class="icon" />
+          </div>
+          <p class="card-text temperature">26°C</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md text-center">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title hour">12:00</h5>
+          <div class="weather-icon">
+            <img src="../../assets/img/cloudy.svg" class="icon" />
+          </div>
+          <p class="card-text temperature">26°C</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
