--- a/src/app/current-weather/current-weather.component.scss
+++ b/src/app/current-weather/current-weather.component.scss
@@ -1,5 +1,47 @@
-.info {
+.current-info {
   height: 100%;
   border-radius: 25px;
   background-image: url("https://images.unsplash.com/photo-1559963110-71b394e7494d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=675&q=80");
+  background-size: cover;
+  padding: 5vh;
+  position: relative;
+}
+
+.gradient {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-image: linear-gradient(135deg, #72edf2 10%, #5151e5 100%);
+  border-radius: 25px;
+  opacity: 0.8;
+}
+
+.date {
+  margin-bottom: 16vh;
+}
+
+.date,
+.location,
+.weather-icon,
+.temperature,
+.description {
+  position: relative;
+}
+
+h1 {
+  font-size: 4rem;
+  font-weight: 700;
+}
+
+.icon {
+  width: 6rem;
+  filter: invert(100%);
+}
+
+@media (min-width: 768px) {
+  .current-info {
+    transform: scale(1.1);
+  }
 }
