added dropdown button

--- a/src/app/daily-forecast/daily-forecast.component.html
+++ b/src/app/daily-forecast/daily-forecast.component.html
@@ -51,7 +51,7 @@
         <div class="card-body">
           <h5 class="card-title hour">12:00</h5>
           <div class="weather-icon">
-            <img src="../../assets/img/cloudy.svg" class="icon" />
+            <img src="../../assets/img/partly_cloudy.svg" class="icon" />
           </div>
           <p class="card-text temperature">26°C</p>
         </div>
@@ -62,7 +62,7 @@
         <div class="card-body">
           <h5 class="card-title hour">12:00</h5>
           <div class="weather-icon">
-            <img src="../../assets/img/cloudy.svg" class="icon" />
+            <img src="../../assets/img/rainy.svg" class="icon" />
           </div>
           <p class="card-text temperature">26°C</p>
         </div>
