--- a/src/app/current-weather/current-weather.component.html
+++ b/src/app/current-weather/current-weather.component.html
@@ -1,6 +1,11 @@
 <div class="current-info">
   <div class="gradient"></div>
-  <div class="location"><h3>Lviv</h3></div>
+  <div class="location">
+    <div class="row">
+      <div class="col"><h3>Lviv</h3></div>
+      <div class="col text-end"><app-dropdown></app-dropdown></div>
+    </div>
+  </div>
   <div class="date"><h4>21.06.2023</h4></div>
   <div class="weather-icon">
     <img src="../../assets/img/sunny.svg" class="icon" />
