--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+/* Importing Bootstrap SCSS file. */
 @import "bootstrap/scss/bootstrap";
 @import url("https://fonts.googleapis.com/css?family=Montserrat:400,700,900&display=swap");
 
@@ -7,5 +8,5 @@ body {
   width: 100%;
   height: 100vh;
   font-family: "Montserrat", sans-serif;
-  background-color: #343d4b;
+  background-color: #343d4b !important;
 }
