added temperature unit changing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,24 @@
 <main class="container">
   <div class="row">
     <div class="col-md-5 no-padding">
-      <app-current-weather></app-current-weather>
+      <app-current-weather [unitSystem]="unitSystem"></app-current-weather>
     </div>
     <div class="col-md-7">
-      <app-daily-forecast></app-daily-forecast>
+      <app-daily-forecast [unitSystem]="unitSystem"></app-daily-forecast>
     </div>
   </div>
 </main>
 <div class="container options">
   <div class="form-check form-switch">
     <input
+      [formControl]="toggleUnitSystem"
       class="form-check-input"
       type="checkbox"
       role="switch"
       id="flexSwitchCheckDefault"
     />
-    <label class="form-check-label" for="flexSwitchCheckDefault"
-      >Farenhiet</label
-    >
+    <label class="form-check-label" for="flexSwitchCheckDefault">{{
+      unitSystem === "metric" ? "Fahrenheit" : "Celsius"
+    }}</label>
   </div>
 </div>
