--- a/src/app/daily-forecast/daily-forecast.component.html
+++ b/src/app/daily-forecast/daily-forecast.component.html
@@ -29,42 +29,66 @@
         <div class="card-body">
           <h5 class="card-title hour">12:00</h5>
           <div class="weather-icon">
-            <img src="../../assets/img/sunny.svg" class="icon" />
+            <img src="../../assets/images/sunny.svg" class="icon" />
           </div>
-          <p class="card-text temperature">26°C</p>
+          <p class="card-text temperature">
+            {{
+              temperature[0]
+                | temperatureConversion : unitSystem
+                | temperatureUnit : unitSystem
+            }}
+          </p>
         </div>
       </div>
     </div>
     <div class="col-md text-center">
       <div class="card">
         <div class="card-body">
-          <h5 class="card-title hour">12:00</h5>
+          <h5 class="card-title hour">13:00</h5>
           <div class="weather-icon">
-            <img src="../../assets/img/cloudy.svg" class="icon" />
+            <img src="../../assets/images/cloudy.svg" class="icon" />
           </div>
-          <p class="card-text temperature">26°C</p>
+          <p class="card-text temperature">
+            {{
+              temperature[1]
+                | temperatureConversion : unitSystem
+                | temperatureUnit : unitSystem
+            }}
+          </p>
         </div>
       </div>
     </div>
     <div class="col-md text-center">
       <div class="card">
         <div class="card-body">
-          <h5 class="card-title hour">12:00</h5>
+          <h5 class="card-title hour">14:00</h5>
           <div class="weather-icon">
-            <img src="../../assets/img/partly_cloudy.svg" class="icon" />
+            <img src="../../assets/images/partly_cloudy.svg" class="icon" />
           </div>
-          <p class="card-text temperature">26°C</p>
+          <p class="card-text temperature">
+            {{
+              temperature[2]
+                | temperatureConversion : unitSystem
+                | temperatureUnit : unitSystem
+            }}
+          </p>
         </div>
       </div>
     </div>
     <div class="col-md text-center">
       <div class="card">
         <div class="card-body">
-          <h5 class="card-title hour">12:00</h5>
+          <h5 class="card-title hour">15:00</h5>
           <div class="weather-icon">
-            <img src="../../assets/img/rainy.svg" class="icon" />
+            <img src="../../assets/images/rainy.svg" class="icon" />
           </div>
-          <p class="card-text temperature">26°C</p>
+          <p class="card-text temperature">
+            {{
+              temperature[3]
+                | temperatureConversion : unitSystem
+                | temperatureUnit : unitSystem
+            }}
+          </p>
         </div>
       </div>
     </div>
