add unit system for speed

--- a/src/app/daily-forecast/daily-forecast.component.html
+++ b/src/app/daily-forecast/daily-forecast.component.html
@@ -20,7 +20,7 @@
       <p>Wind</p>
     </div>
     <div class="col-4">
-      <p>5 km/h</p>
+      <p>{{ 5 | speedConversion : unitSystem | speedUnit : unitSystem }}</p>
     </div>
   </div>
   <div class="row cards">
