--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
       id="flexSwitchCheckDefault"
     />
     <label class="form-check-label" for="flexSwitchCheckDefault">{{
-      unitSystem === "metric" ? "Fahrenheit" : "Celsius"
+      unitSystem === "metric" ? "Imperial" : "Metric"
     }}</label>
   </div>
 </div>
