--- a/src/app/dropdown/dropdown.component.html
+++ b/src/app/dropdown/dropdown.component.html
@@ -9,9 +9,7 @@
       Select city
     </button>
     <div ngbDropdownMenu aria-labelledby="dropdown">
-      <button ngbDropdownItem>Kyiv</button>
-      <button ngbDropdownItem>Lviv</button>
-      <button ngbDropdownItem>Odesa</button>
+      <button ngbDropdownItem *ngFor="let city of cities">{{ city }}</button>
     </div>
   </div>
 </div>
