added icon directive

--- a/src/app/current-weather/current-weather.component.html
+++ b/src/app/current-weather/current-weather.component.html
@@ -8,7 +8,7 @@
   </div>
   <div class="date"><h4>21.06.2023</h4></div>
   <div class="weather-icon">
-    <img src="../../assets/images/sunny.svg" class="icon" />
+    <img appWheatherIcon [weatherIcon]="weatherIcon" class="icon" />
   </div>
   <div class="temperature">
     <h1>
