--- a/src/app/daily-forecast/daily-forecast.component.html
+++ b/src/app/daily-forecast/daily-forecast.component.html
@@ -29,7 +29,7 @@
         <div class="card-body">
           <h5 class="card-title hour">12:00</h5>
           <div class="weather-icon">
-            <img src="../../assets/images/sunny.svg" class="icon" />
+            <img appWheatherIcon [weatherIcon]="weatherIcon" class="icon" />
           </div>
           <p class="card-text temperature">
             {{
@@ -46,7 +46,7 @@
         <div class="card-body">
           <h5 class="card-title hour">13:00</h5>
           <div class="weather-icon">
-            <img src="../../assets/images/cloudy.svg" class="icon" />
+            <img appWheatherIcon [weatherIcon]="weatherIcon" class="icon" />
           </div>
           <p class="card-text temperature">
             {{
@@ -63,7 +63,7 @@
         <div class="card-body">
           <h5 class="card-title hour">14:00</h5>
           <div class="weather-icon">
-            <img src="../../assets/images/partly_cloudy.svg" class="icon" />
+            <img appWheatherIcon [weatherIcon]="weatherIcon" class="icon" />
           </div>
           <p class="card-text temperature">
             {{
@@ -80,7 +80,7 @@
         <div class="card-body">
           <h5 class="card-title hour">15:00</h5>
           <div class="weather-icon">
-            <img src="../../assets/images/rainy.svg" class="icon" />
+            <img appWheatherIcon [weatherIcon]="weatherIcon" class="icon" />
           </div>
           <p class="card-text temperature">
             {{
