added city select service

--- a/src/app/current-weather/current-weather.component.html
+++ b/src/app/current-weather/current-weather.component.html
@@ -2,7 +2,9 @@
   <div class="gradient"></div>
   <div class="location">
     <div class="row">
-      <div class="col"><h3>Lviv</h3></div>
+      <div class="col">
+        <h3>{{ selectedCity }}</h3>
+      </div>
       <div class="col text-end"><app-dropdown></app-dropdown></div>
     </div>
   </div>
