added data processing in weather service

--- a/src/app/current-weather/current-weather.component.html
+++ b/src/app/current-weather/current-weather.component.html
@@ -10,7 +10,7 @@
   </div>
   <div class="date"><h4>21.06.2023</h4></div>
   <div class="weather-icon">
-    <img appWheatherIcon [weatherIcon]="weatherIcon" class="icon" />
+    <img appWeatherIcon [weatherIcon]="weatherIcon" class="icon" />
   </div>
   <div class="temperature">
     <h1>
