--- a/src/app/current-weather/current-weather.component.html
+++ b/src/app/current-weather/current-weather.component.html
@@ -30,6 +30,6 @@
     class="description"
     *ngIf="cityWeather && cityWeather.weather.length > 0"
   >
-    <h2>{{ geetWeatherDescription(cityWeather.weather[0].weatherCode) }}</h2>
+    <h2>{{ geetWeatherDescription() }}</h2>
   </div>
 </div>
