--- a/src/app/daily-forecast/daily-forecast.component.html
+++ b/src/app/daily-forecast/daily-forecast.component.html
@@ -1,118 +1,120 @@
-<div class="hourly-info">
-  <div class="row features">
-    <div class="col-8">
-      <p>PRECIPITATION</p>
+<ng-container *ngIf="cityWeather">
+  <div class="hourly-info">
+    <div class="row features">
+      <div class="col-8">
+        <p>PRECIPITATION</p>
+      </div>
+      <div class="col-4">
+        <p>{{ cityWeather.weather[0].precipitationProbability }}%</p>
+      </div>
     </div>
-    <div class="col-4">
-      <p>{{ cityWeather.weather[0].precipitationProbability }}%</p>
+    <div class="row features">
+      <div class="col-8">
+        <p>Humidity</p>
+      </div>
+      <div class="col-4">
+        <p>{{ cityWeather.weather[0].humidity }}%</p>
+      </div>
     </div>
-  </div>
-  <div class="row features">
-    <div class="col-8">
-      <p>Humidity</p>
+    <div class="row features">
+      <div class="col-8">
+        <p>Wind</p>
+      </div>
+      <div class="col-4">
+        <p>
+          {{
+            cityWeather.weather[0].windSpeed
+              | speedConversion : unitSystem
+              | speedUnit : unitSystem
+          }}
+        </p>
+      </div>
     </div>
-    <div class="col-4">
-      <p>{{ cityWeather.weather[0].humidity }}%</p>
-    </div>
-  </div>
-  <div class="row features">
-    <div class="col-8">
-      <p>Wind</p>
-    </div>
-    <div class="col-4">
-      <p>
-        {{
-          cityWeather.weather[0].windSpeed
-            | speedConversion : unitSystem
-            | speedUnit : unitSystem
-        }}
-      </p>
-    </div>
-  </div>
-  <div class="row cards">
-    <div class="col-md">
-      <div class="card text-center">
-        <div class="card-body">
-          <h5 class="card-title hour">{{ getTime(1) }}</h5>
-          <div class="weather-icon">
-            <img
-              appWeatherIcon
-              [weatherIcon]="getWeatherIcon(1)"
-              class="icon"
-            />
+    <div class="row cards">
+      <div class="col-md">
+        <div class="card text-center">
+          <div class="card-body">
+            <h5 class="card-title hour">{{ getTime(1) }}</h5>
+            <div class="weather-icon">
+              <img
+                appWeatherIcon
+                [weatherIcon]="getWeatherIcon(1)"
+                class="icon"
+              />
+            </div>
+            <p class="card-text temperature">
+              {{
+                getTemperature(1)
+                  | temperatureConversion : unitSystem
+                  | temperatureUnit : unitSystem
+              }}
+            </p>
           </div>
-          <p class="card-text temperature">
-            {{
-              getTemperature(1)
-                | temperatureConversion : unitSystem
-                | temperatureUnit : unitSystem
-            }}
-          </p>
+        </div>
+      </div>
+      <div class="col-md text-center">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title hour">{{ getTime(2) }}</h5>
+            <div class="weather-icon">
+              <img
+                appWeatherIcon
+                [weatherIcon]="getWeatherIcon(2)"
+                class="icon"
+              />
+            </div>
+            <p class="card-text temperature">
+              {{
+                getTemperature(2)
+                  | temperatureConversion : unitSystem
+                  | temperatureUnit : unitSystem
+              }}
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md text-center">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title hour">{{ getTime(3) }}</h5>
+            <div class="weather-icon">
+              <img
+                appWeatherIcon
+                [weatherIcon]="getWeatherIcon(3)"
+                class="icon"
+              />
+            </div>
+            <p class="card-text temperature">
+              {{
+                getTemperature(3)
+                  | temperatureConversion : unitSystem
+                  | temperatureUnit : unitSystem
+              }}
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md text-center">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title hour">{{ getTime(4) }}</h5>
+            <div class="weather-icon">
+              <img
+                appWeatherIcon
+                [weatherIcon]="getWeatherIcon(4)"
+                class="icon"
+              />
+            </div>
+            <p class="card-text temperature">
+              {{
+                getTemperature(4)
+                  | temperatureConversion : unitSystem
+                  | temperatureUnit : unitSystem
+              }}
+            </p>
+          </div>
         </div>
       </div>
     </div>
-    <div class="col-md text-center">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title hour">{{ getTime(2) }}</h5>
-          <div class="weather-icon">
-            <img
-              appWeatherIcon
-              [weatherIcon]="getWeatherIcon(2)"
-              class="icon"
-            />
-          </div>
-          <p class="card-text temperature">
-            {{
-              getTemperature(2)
-                | temperatureConversion : unitSystem
-                | temperatureUnit : unitSystem
-            }}
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="col-md text-center">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title hour">{{ getTime(3) }}</h5>
-          <div class="weather-icon">
-            <img
-              appWeatherIcon
-              [weatherIcon]="getWeatherIcon(3)"
-              class="icon"
-            />
-          </div>
-          <p class="card-text temperature">
-            {{
-              getTemperature(3)
-                | temperatureConversion : unitSystem
-                | temperatureUnit : unitSystem
-            }}
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="col-md text-center">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title hour">{{ getTime(4) }}</h5>
-          <div class="weather-icon">
-            <img
-              appWeatherIcon
-              [weatherIcon]="getWeatherIcon(4)"
-              class="icon"
-            />
-          </div>
-          <p class="card-text temperature">
-            {{
-              getTemperature(4)
-                | temperatureConversion : unitSystem
-                | temperatureUnit : unitSystem
-            }}
-          </p>
-        </div>
-      </div>
-    </div>
   </div>
-</div>
+</ng-container>
